--- a/src/vmm-migrate.glade
+++ b/src/vmm-migrate.glade
@@ -250,12 +250,18 @@
                             <property name="visible">True</property>
                             <property name="spacing">3</property>
                             <child>
-                              <widget class="GtkLabel" id="label15">
+                              <widget class="GtkAlignment" id="alignment4">
                                 <property name="visible">True</property>
-                                <property name="xalign">1</property>
-                                <property name="label" translatable="yes">Max downtime:</property>
-                                <property name="use_markup">True</property>
-                                <property name="use_underline">True</property>
+                                <property name="left_padding">6</property>
+                                <child>
+                                  <widget class="GtkLabel" id="label15">
+                                    <property name="visible">True</property>
+                                    <property name="xalign">1</property>
+                                    <property name="label" translatable="yes">Max downtime:</property>
+                                    <property name="use_markup">True</property>
+                                    <property name="use_underline">True</property>
+                                  </widget>
+                                </child>
                               </widget>
                               <packing>
                                 <property name="expand">False</property>
@@ -290,7 +296,7 @@
                                         <property name="visible">True</property>
                                         <property name="sensitive">False</property>
                                         <property name="can_focus">True</property>
-                                        <property name="invisible_char">&#x25CF;</property>
+                                        <property name="invisible_char">●</property>
                                         <property name="adjustment">30 0 1000000 1 1000 0</property>
                                         <property name="snap_to_ticks">True</property>
                                         <property name="numeric">True</property>
