--- a/src/vmm-preferences.glade
+++ b/src/vmm-preferences.glade
@@ -322,7 +322,7 @@
                         <child>
                           <widget class="GtkTable" id="table3">
                             <property name="visible">True</property>
-                            <property name="n_rows">7</property>
+                            <property name="n_rows">6</property>
                             <property name="row_spacing">3</property>
                             <child>
                               <widget class="GtkComboBox" id="prefs-console-scaling">
@@ -333,8 +333,8 @@ Always</property>
                                 <signal name="changed" handler="on_prefs_console_scaling_changed"/>
                               </widget>
                               <packing>
-                                <property name="top_attach">5</property>
-                                <property name="bottom_attach">6</property>
+                                <property name="top_attach">3</property>
+                                <property name="bottom_attach">4</property>
                                 <property name="x_padding">5</property>
                               </packing>
                             </child>
@@ -345,33 +345,6 @@ Always</property>
                                 <property name="label" translatable="yes">Graphical console _scaling:</property>
                                 <property name="use_underline">True</property>
                                 <property name="mnemonic_widget">prefs-console-scaling</property>
-                              </widget>
-                              <packing>
-                                <property name="top_attach">4</property>
-                                <property name="bottom_attach">5</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <widget class="GtkComboBox" id="prefs-console-keygrab">
-                                <property name="visible">True</property>
-                                <property name="items" translatable="yes">Never
-When fullscreen
-On mouse over</property>
-                                <signal name="changed" handler="on_prefs_console_keygrab_changed"/>
-                              </widget>
-                              <packing>
-                                <property name="top_attach">3</property>
-                                <property name="bottom_attach">4</property>
-                                <property name="x_padding">5</property>
-                              </packing>
-                            </child>
-                            <child>
-                              <widget class="GtkLabel" id="label15">
-                                <property name="visible">True</property>
-                                <property name="xalign">0</property>
-                                <property name="label" translatable="yes">Grab _keyboard accelerators:</property>
-                                <property name="use_underline">True</property>
-                                <property name="mnemonic_widget">prefs-console-keygrab</property>
                               </widget>
                               <packing>
                                 <property name="top_attach">2</property>
@@ -441,8 +414,42 @@ For all domains</property>
                                 </child>
                               </widget>
                               <packing>
-                                <property name="top_attach">6</property>
-                                <property name="bottom_attach">7</property>
+                                <property name="top_attach">4</property>
+                                <property name="bottom_attach">5</property>
+                              </packing>
+                            </child>
+                            <child>
+                              <widget class="GtkHBox" id="hbox1">
+                                <property name="visible">True</property>
+                                <property name="spacing">6</property>
+                                <child>
+                                  <widget class="GtkLabel" id="label15">
+                                    <property name="visible">True</property>
+                                    <property name="tooltip" translatable="yes">Force console menu accelerators while the console is active. Enabling this may overwrite keyboard interaction with the guest.</property>
+                                    <property name="label" translatable="yes">Force console keyboard shortcuts:</property>
+                                  </widget>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="position">0</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <widget class="GtkCheckButton" id="prefs-console-accels">
+                                    <property name="visible">True</property>
+                                    <property name="can_focus">True</property>
+                                    <property name="receives_default">False</property>
+                                    <property name="draw_indicator">True</property>
+                                    <signal name="toggled" handler="on_prefs_console_accels_toggled"/>
+                                  </widget>
+                                  <packing>
+                                    <property name="expand">False</property>
+                                    <property name="position">1</property>
+                                  </packing>
+                                </child>
+                              </widget>
+                              <packing>
+                                <property name="top_attach">5</property>
+                                <property name="bottom_attach">6</property>
                               </packing>
                             </child>
                           </widget>
