--- a/src/vmm-host.glade
+++ b/src/vmm-host.glade
@@ -209,6 +209,7 @@
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="label">example.com</property>
+                                <property name="ellipsize">end</property>
                               </widget>
                               <packing>
                                 <property name="left_attach">1</property>
@@ -290,6 +291,7 @@
                                 <property name="visible">True</property>
                                 <property name="xalign">0</property>
                                 <property name="label">example.com</property>
+                                <property name="ellipsize">end</property>
                               </widget>
                               <packing>
                                 <property name="left_attach">1</property>
