--- a/src/vmm-create.glade
+++ b/src/vmm-create.glade
@@ -5,7 +5,7 @@
   <widget class="GtkWindow" id="vmm-create">
     <property name="title" translatable="yes">New VM</property>
     <property name="type_hint">dialog</property>
-    <signal name="delete_event" handler="on_vmm_newcreate_delete_event" swapped="no"/>
+    <signal name="delete_event" handler="on_vmm_newcreate_delete_event"/>
     <child>
       <widget class="GtkVBox" id="vbox1">
         <property name="visible">True</property>
@@ -92,7 +92,7 @@
                     <property name="visible">True</property>
                     <property name="can_focus">True</property>
                     <property name="show_border">False</property>
-                    <signal name="switch_page" handler="on_create_pages_switch_page" swapped="no"/>
+                    <signal name="switch_page" handler="on_create_pages_switch_page"/>
                     <child>
                       <widget class="GtkVBox" id="vbox4">
                         <property name="visible">True</property>
@@ -128,7 +128,7 @@
                                         <property name="width_request">250</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
-                                        <signal name="activate" handler="on_create_vm_name_activate" swapped="no"/>
+                                        <signal name="activate" handler="on_create_vm_name_activate"/>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -168,7 +168,7 @@
                                         <child>
                                           <widget class="GtkComboBox" id="create-conn">
                                             <property name="visible">True</property>
-                                            <signal name="changed" handler="on_create_conn_changed" swapped="no"/>
+                                            <signal name="changed" handler="on_create_conn_changed"/>
                                           </widget>
                                           <packing>
                                             <property name="expand">False</property>
@@ -413,7 +413,7 @@
                                                     <property name="use_underline">True</property>
                                                     <property name="active">True</property>
                                                     <property name="draw_indicator">True</property>
-                                                    <signal name="toggled" handler="on_install_local_cdrom_toggled" swapped="no"/>
+                                                    <signal name="toggled" handler="on_install_local_cdrom_toggled"/>
                                                   </widget>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -431,7 +431,7 @@
                                                         <child>
                                                           <widget class="GtkComboBox" id="install-local-cdrom-combo">
                                                             <property name="visible">True</property>
-                                                            <signal name="changed" handler="on_install_local_cdrom_combo_changed" swapped="no"/>
+                                                            <signal name="changed" handler="on_install_local_cdrom_combo_changed"/>
                                                           </widget>
                                                           <packing>
                                                             <property name="expand">False</property>
@@ -475,7 +475,7 @@
                                                 <property name="active">True</property>
                                                 <property name="draw_indicator">True</property>
                                                 <property name="group">install-local-cdrom</property>
-                                                <signal name="toggled" handler="on_install_local_iso_toggled" swapped="no"/>
+                                                <signal name="toggled" handler="on_install_local_iso_toggled"/>
                                               </widget>
                                               <packing>
                                                 <property name="expand">False</property>
@@ -493,7 +493,7 @@
                                                     <child>
                                                       <widget class="GtkComboBoxEntry" id="install-local-box">
                                                         <property name="visible">True</property>
-                                                        <signal name="changed" handler="on_install_local_box_changed" swapped="no"/>
+                                                        <signal name="changed" handler="on_install_local_box_changed"/>
                                                       </widget>
                                                     </child>
                                                   </widget>
@@ -509,7 +509,7 @@
                                                     <property name="can_focus">True</property>
                                                     <property name="receives_default">True</property>
                                                     <property name="use_underline">True</property>
-                                                    <signal name="clicked" handler="on_install_local_browse_clicked" swapped="no"/>
+                                                    <signal name="clicked" handler="on_install_local_browse_clicked"/>
                                                   </widget>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -571,7 +571,7 @@
                                         <child>
                                           <widget class="GtkComboBoxEntry" id="install-url-box">
                                             <property name="visible">True</property>
-                                            <signal name="changed" handler="on_install_url_box_changed" swapped="no"/>
+                                            <signal name="changed" handler="on_install_url_box_changed"/>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -785,7 +785,7 @@ User shouldn't see this.</property>
                                             <property name="can_focus">True</property>
                                             <property name="receives_default">True</property>
                                             <property name="use_underline">True</property>
-                                            <signal name="clicked" handler="on_install_import_browse_clicked" swapped="no"/>
+                                            <signal name="clicked" handler="on_install_import_browse_clicked"/>
                                           </widget>
                                           <packing>
                                             <property name="expand">False</property>
@@ -830,8 +830,8 @@ User shouldn't see this.</property>
                             <child>
                               <widget class="GtkVBox" id="install-detect-os-box">
                                 <property name="visible">True</property>
-                                <signal name="hide" handler="on_install_detect_os_box_hide" swapped="no"/>
-                                <signal name="show" handler="on_install_detect_os_box_show" swapped="no"/>
+                                <signal name="hide" handler="on_install_detect_os_box_hide"/>
+                                <signal name="show" handler="on_install_detect_os_box_show"/>
                                 <child>
                                   <widget class="GtkCheckButton" id="install-detect-os">
                                     <property name="label" translatable="yes">A_utomatically detect operating system based on install media</property>
@@ -841,7 +841,7 @@ User shouldn't see this.</property>
                                     <property name="use_underline">True</property>
                                     <property name="active">True</property>
                                     <property name="draw_indicator">True</property>
-                                    <signal name="toggled" handler="on_install_detect_os_toggled" swapped="no"/>
+                                    <signal name="toggled" handler="on_install_detect_os_toggled"/>
                                   </widget>
                                   <packing>
                                     <property name="expand">False</property>
@@ -917,7 +917,7 @@ User shouldn't see this.</property>
                                     <child>
                                       <widget class="GtkComboBox" id="install-os-type">
                                         <property name="visible">True</property>
-                                        <signal name="changed" handler="on_install_os_type_changed" swapped="no"/>
+                                        <signal name="changed" handler="on_install_os_type_changed"/>
                                       </widget>
                                       <packing>
                                         <property name="left_attach">1</property>
@@ -1199,7 +1199,7 @@ User shouldn't see this.</property>
                             <property name="use_underline">True</property>
                             <property name="active">True</property>
                             <property name="draw_indicator">True</property>
-                            <signal name="toggled" handler="on_enable_storage_toggled" swapped="no"/>
+                            <signal name="toggled" handler="on_enable_storage_toggled"/>
                           </widget>
                           <packing>
                             <property name="expand">False</property>
@@ -1355,7 +1355,7 @@ User shouldn't see this.</property>
                                         <property name="active">True</property>
                                         <property name="draw_indicator">True</property>
                                         <property name="group">config-storage-create</property>
-                                        <signal name="toggled" handler="on_config_storage_select_toggled" swapped="no"/>
+                                        <signal name="toggled" handler="on_config_storage_select_toggled"/>
                                         <child>
                                           <widget class="GtkLabel" id="label124">
                                             <property name="visible">True</property>
@@ -1388,7 +1388,7 @@ User shouldn't see this.</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="use_underline">True</property>
-                                        <signal name="clicked" handler="on_config_storage_browse_clicked" swapped="no"/>
+                                        <signal name="clicked" handler="on_config_storage_browse_clicked"/>
                                       </widget>
                                       <packing>
                                         <property name="expand">False</property>
@@ -1700,7 +1700,7 @@ User shouldn't see this.</property>
                                                 <child>
                                                   <widget class="GtkComboBox" id="config-netdev">
                                                     <property name="visible">True</property>
-                                                    <signal name="changed" handler="on_config_netdev_changed" swapped="no"/>
+                                                    <signal name="changed" handler="on_config_netdev_changed"/>
                                                   </widget>
                                                   <packing>
                                                     <property name="expand">False</property>
@@ -1779,7 +1779,7 @@ User shouldn't see this.</property>
                                             <property name="receives_default">False</property>
                                             <property name="use_underline">True</property>
                                             <property name="draw_indicator">True</property>
-                                            <signal name="toggled" handler="on_config_set_macaddr_toggled" swapped="no"/>
+                                            <signal name="toggled" handler="on_config_set_macaddr_toggled"/>
                                           </widget>
                                           <packing>
                                             <property name="expand">False</property>
@@ -1858,7 +1858,7 @@ User shouldn't see this.</property>
                                         <child>
                                           <widget class="GtkComboBox" id="config-arch">
                                             <property name="visible">True</property>
-                                            <signal name="changed" handler="on_config_arch_changed" swapped="no"/>
+                                            <signal name="changed" handler="on_config_arch_changed"/>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -1872,7 +1872,7 @@ User shouldn't see this.</property>
                                         <child>
                                           <widget class="GtkComboBox" id="config-hv">
                                             <property name="visible">True</property>
-                                            <signal name="changed" handler="on_config_hv_changed" swapped="no"/>
+                                            <signal name="changed" handler="on_config_hv_changed"/>
                                           </widget>
                                           <packing>
                                             <property name="left_attach">1</property>
@@ -1967,7 +1967,7 @@ User shouldn't see this.</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_stock">True</property>
-                    <signal name="clicked" handler="on_create_help_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_create_help_clicked"/>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -1983,7 +1983,7 @@ User shouldn't see this.</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_stock">True</property>
-                    <signal name="clicked" handler="on_create_cancel_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_create_cancel_clicked"/>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -1999,7 +1999,7 @@ User shouldn't see this.</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_stock">True</property>
-                    <signal name="clicked" handler="on_create_back_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_create_back_clicked"/>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -2014,7 +2014,7 @@ User shouldn't see this.</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_stock">True</property>
-                    <signal name="clicked" handler="on_create_forward_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_create_forward_clicked"/>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
@@ -2028,7 +2028,7 @@ User shouldn't see this.</property>
                     <property name="can_focus">True</property>
                     <property name="receives_default">True</property>
                     <property name="use_underline">True</property>
-                    <signal name="clicked" handler="on_create_finish_clicked" swapped="no"/>
+                    <signal name="clicked" handler="on_create_finish_clicked"/>
                   </widget>
                   <packing>
                     <property name="expand">False</property>
